qi-derive/tests/typed/fail_struct_field_not_typed.stderr
error[E0277]: the trait bound `F: Typed` is not satisfied
 --> tests/typed/fail_struct_field_not_typed.rs:5:12
  |
5 |     pub f: F,
  |            ^ the trait `Typed` is not implemented for `F`
  |
  = help: the following other types implement trait `Typed`:
            &str
            ()
            BTreeMap<K, V>
            HashMap<K, V>
            PhantomData<T>
            S
            Signature
            Vec<T>
          and $N others
