qi-derive/tests/typed/fail_struct_field_not_typed.rs
struct F;

#[derive(qi_derive::Typed)]
struct S {
    pub f: F,
}

fn main() {}
